# dsnote

./: .clang-format  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  config.h.in
arch/: PKGBUILD  dsnote.install
arch/git/: PKGBUILD  dsnote.install
arch/local/: PKGBUILD
arch/release/: PKGBUILD
aur/: PKGBUILD
cmake/: aprilasr.cmake  bergamot.cmake  dbus_api.cmake  espeak.cmake  espeak_module.cmake  ffmpeg.cmake  fmt.cmake  html2md.cmake  install_desktop.cmake  install_sfos.cmake  kdbusservice.cmake  libarchive.cmake  libnumbertext.cmake  libstt.cmake  maddy.cmake  openblas.cmake  openblas_pkgconfig.cmake  piper.cmake  pybind11.cmake  pymodules.cmake  python_module.cmake  qhotkey.cmake  qqc2-breeze-style.cmake  rdrview.cmake  rhvoice.cmake  rhvoice_module.cmake  rnnoise.cmake  rubberband.cmake  sam.cmake  ssplitcpp.cmake  taglib.cmake  tests.cmake  translations.cmake  uroman.cmake  vosk.cmake  webrtcvad.cmake  whispercpp.cmake  wl-clipboard.cmake  wl_clipboard.cmake  xdo.cmake  (+2 more)
config/: README.txt  models.json
dbus/: dsnote.xml.in  org.freedesktop.Application.xml  org.freedesktop.Notifications.xml  org.kde.Klipper.xml  org.mkiol.Speech.service  org.mkiol.Speech.xml  org.mkiol.Stt.service  org.mkiol.Stt.xml  org.mkiol.dsnote.service
deb/: PKGBUILD  README.md  dsnote.pacscript  makedeb.sh
deb/debian/: changelog  control  copyright  postinst
desktop/: dbus_app.service.in  dsnote.desktop  dsnote.desktop.in  dsnote.metainfo.xml  dsnote.metainfo.xml.in  dsnote.pro  qml.qrc  res.qrc  resources.qrc
desktop/qml/: AboutPage.qml  AddTextDialog.qml  AddonInstallDialog.qml  BlinkToolButton.qml  ChangelogPage.qml  ComboBoxForm.qml  ComboButton.qml  DialogPage.qml  Dot.qml  DoubleTextArea.qml  DuoComboButton.qml  ExportFilePage.qml  FileWritePage.qml  GpuComboBox.qml  HelloPage.qml  HelpDialog.qml  HorizontalLine.qml  ImportUrlDialog.qml  InfoItem.qml  InlineMessage.qml  LangFilteringWidget.qml  LangsPage.qml  LayoutFixer.qml  MainTipMessage.qml  MainToolBar.qml  ModelFeatureButton.qml  ModelFilteringWidget.qml  ModelInfoPage.qml  ModelLicensePage.qml  ModelsSwitcher.qml  ModelsSwitcherCompact.qml  Notepad.qml  NotesPage.qml  PackFilteringWidget.qml  PairLabel.qml  PlaceholderLabel.qml  PlaceholderLabelForLayout.qml  RichLabel.qml  RowForm.qml  RuleEditPage.qml  (+30 more)
fedora/: dsnote.spec  make_rpm.sh
flatpak/: dsnote.metainfo.xml  net.mkiol.SpeechNote-tiny.yaml  net.mkiol.SpeechNote.Addon.amd-zluda.yaml  net.mkiol.SpeechNote.Addon.amd.metainfo.xml  net.mkiol.SpeechNote.Addon.amd.yaml  net.mkiol.SpeechNote.Addon.nvidia.metainfo.xml  net.mkiol.SpeechNote.Addon.nvidia.yaml  net.mkiol.SpeechNote.yaml  python3-faster-whisper-x86-64.yaml  python3-faster-whisper.yaml  python3-modules-aarch64.yaml  python3-modules-x86-64.yaml  python3-modules.yaml  python3-mycroft_mimic3_tts-x86-64.yaml  python3-mycroft_mimic3_tts.yaml  python3-unikud-x86-64.yaml  rocm-deb-sources.yaml  zluda-cargo-sources.yaml
nonbreaking_prefixes/: ca.txt  cs.txt  da.txt  de.txt  en.txt  es.txt  fi.txt  fr.txt  hu.txt  it.txt  lt.txt  nl.txt  no.txt  pt.txt  ro.txt  ru.txt  sv.txt  tr.txt
patches/: bergamot.patch  espeak-flatpak.patch  espeak.patch  faster-whisper.patch  ffmpeg.patch  html2md.patch  mimic3.patch  openfst.patch  phonemizer.patch  piper.patch  piperphonemize.patch  qhotkey.patch  rdrview.patch  rhvoice.patch  sam.patch  tensorboard.patch  tts-aarch64.patch  tts-x86_64.patch  tts.patch  wandb.patch  webrtcvad.patch  whispercpp-zluda.patch  whispercpp.patch  xdo.patch  zluda.patch
resources/: voice-1.opus  voice-2.opus
sailfish/: dsnote.pro  harbour-dsnote.desktop  sailfishapp_i18n.pri
sailfish/qml/: AboutPage.qml  ChangelogPage.qml  CoverPage.qml  DirPage.qml  ItemBox.qml  LangItem.qml  LangsPage.qml  LogItem.qml  ModelItem.qml  NotesPage.qml  PaddedLabel.qml  SearchPageHeader.qml  SettingsPage.qml  SimpleListItem.qml  Spacer.qml  SpeechIndicator.qml  SttPanel.qml  Toast.qml  main.qml
sailfish/rpm/: harbour-dsnote.changes.in  harbour-dsnote.changes.run.in  harbour-dsnote.spec  harbour-dsnote.yaml
sfos/: dbus_app.service.in  harbour-dsnote-open-url.desktop  harbour-dsnote.desktop  harbour-dsnote.spec  resources.qrc
sfos/qml/: AboutPage.qml  AddTextDialog.qml  BusyIndicatorWithProgress.qml  ChangelogPage.qml  ComboButton.qml  CoverPage.qml  DirPage.qml  DuoComboButton.qml  ExportFilePage.qml  FileWritePage.qml  HintLabel.qml  ImportUrlDialog.qml  ItemBox.qml  (+20 more)
src/: RSJparser.hpp  app_server.cpp  app_server.hpp  april_engine.cpp  april_engine.hpp  audio_device_manager.cpp  audio_device_manager.hpp  audio_source.h  avlogger.cpp  avlogger.hpp  canary_engine.cpp  canary_engine.hpp  checksum_tools.cpp  checksum_tools.hpp  cmd_options.hpp  comp_tools.cpp  comp_tools.hpp  coqui_engine.cpp  coqui_engine.hpp  cpu_tools.cpp  cpu_tools.hpp  dbus_application_adaptor.cpp  dbus_application_adaptor.h  dbus_application_inf.cpp  dbus_application_inf.h  dbus_klipper_inf.cpp  dbus_klipper_inf.h  dbus_notifications_inf.cpp  dbus_notifications_inf.h  dbus_portal_globalshortcuts_inf.cpp  dbus_portal_globalshortcuts_inf.h  dbus_portal_request_inf.cpp  dbus_portal_request_inf.h  dbus_speech_adaptor.cpp  dbus_speech_adaptor.h  dbus_speech_inf.cpp  dbus_speech_inf.h  dbus_stt_adaptor.cpp  dbus_stt_adaptor.h  dbus_stt_inf.cpp  (+138 more)
systemd/: dsnote.service
tests/: cpu_tools_test.cpp  engine_wrapper_test.cpp  gpu_tools_test.cpp  mic_source_test.cpp  stt_engine_test.cpp  text_tools_test.cpp  vad_test.cpp  vad_wrapper_test.cpp
tools/: install_canary_runtime.sh  make_espeakdata_module.sh  make_pymodules.sh  make_python_module.sh  make_rhvoiceconfig_module.sh  make_rhvoicedata_module.sh  make_translations_qrc.sh
translations/: dsnote-ar.ts  dsnote-ca_ES.ts  dsnote-cs_CZ.ts  dsnote-de.ts  dsnote-en.ts  dsnote-es.ts  dsnote-es_ES.ts  dsnote-fr.ts  dsnote-fr_CA.ts  dsnote-it.ts  dsnote-nb_NO.ts  dsnote-nl.ts  dsnote-no.ts  dsnote-pl.ts  dsnote-pt_BR.ts  dsnote-ru.ts  dsnote-sl.ts  dsnote-sv.ts  dsnote-tr_TR.ts  dsnote-uk.ts  dsnote-zh_CN.ts  dsnote-zh_TW.ts  my-version-dsnote-ru.ts
(+15 files in other folders)
